@@ -1,12 +1,14 @@
 package com.example.aegis.budgpal;
 
 import android.content.Intent;
+import android.content.SharedPreferences;
 import android.database.Cursor;
 import android.database.sqlite.SQLiteDatabase;
 import android.support.v4.widget.DrawerLayout;
 import android.support.v7.app.AppCompatActivity;
 import android.os.Bundle;
 import android.view.Gravity;
+import android.view.KeyEvent;
 import android.view.View;
 import android.widget.AdapterView;
 import android.widget.ArrayAdapter;
@@ -26,46 +28,46 @@ public class SetBudget extends AppCompatActivity {
     private ListView NavDrawerList;
     private String[] NavDrawerItems;
 
-    private SQLiteDatabase db;
-
-    private TextView OldBudget;
     private EditText AmountField;
     private Button SaveButton;
+
     private CheckBox DailyBox;
     private CheckBox WeeklyBox;
     private CheckBox BiweeklyBox;
     private CheckBox MonthlyBox;
 
     private Long UserID;
-    private Long BudgetID;
+//    private Long BudgetID;
 
-    private boolean timePeriodSet = false;
-    private boolean amountSet = false;
+    private SharedPreferences Preferences;
+    private SharedPreferences.Editor PreferencesEditor;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_set_budget);
 
-        db = StatUtils.GetDatabase(getApplicationContext());
+        Preferences = getSharedPreferences(getString(R.string.preferences_name), MODE_PRIVATE);
+        PreferencesEditor = getSharedPreferences(getString(R.string.preferences_name),MODE_PRIVATE).edit();
 
-        OldBudget = (TextView)findViewById(R.id.currentBudgetText);
+        TextView oldBudget = (TextView) findViewById(R.id.currentBudgetText);
 
         AmountField = (EditText)findViewById(R.id.newBudgetText);
 
         SaveButton  = (Button)findViewById(R.id.budgetSaveButton);
+        SaveButton.setEnabled(false);
 
         DailyBox = (CheckBox)findViewById(R.id.budgetDailyCheckBox);
         WeeklyBox = (CheckBox)findViewById(R.id.budgetWeeklyCheckBox);
         BiweeklyBox = (CheckBox)findViewById(R.id.budgetBiweeklyCheckBox);
         MonthlyBox = (CheckBox)findViewById(R.id.budgetMonthlyCheckBox);
 
-        UserID = getIntent().getLongExtra("UserID", -1);
-        BudgetID = StatUtils.GetBudgetID(getApplicationContext(), UserID);
+//        UserID = getIntent().getLongExtra("UserID", -1);
+        UserID = Preferences.getLong("UserID", -1);
+        final Budget tempB = Budget.getCurrentBudgetForUser(getApplicationContext(), UserID);
 
-        if(BudgetID != -1){
+        if(tempB.getBudgetID() != -1){
             String period;
-            Budget tempB = StatUtils.GetBudget(getApplicationContext(), BudgetID);
 
             switch (tempB.getTimePeriod()){
                 case 1:
@@ -85,11 +87,9 @@ public class SetBudget extends AppCompatActivity {
                     break;
             }
 
-            OldBudget.setText(NumberFormat.getCurrencyInstance(new Locale("en", "US"))
-                    .format(tempB.getAmount()).toString() + " per " + period);
+            oldBudget.setText(NumberFormat.getCurrencyInstance(new Locale("en", "US"))
+                    .format(tempB.getAmount()) + " per " + period);
         }
-
-        Toast.makeText(getApplicationContext(), UserID.toString(), Toast.LENGTH_SHORT).show();
 
         NavDrawer      = (DrawerLayout)findViewById(R.id.navDrawer);
         NavDrawerList  = (ListView)findViewById(R.id.navDrawerList);
@@ -101,7 +101,7 @@ public class SetBudget extends AppCompatActivity {
             public void onItemClick(AdapterView<?> parent, View view, int position, long id) {
 
                 NavDrawer.closeDrawer(Gravity.LEFT);
-                Intent tempIntent = SwitchManager.SwitchActivity(SetBudget.this, parent.getItemAtPosition(position).toString(), UserID);
+                Intent tempIntent = SwitchManager.SwitchActivity(SetBudget.this, parent.getItemAtPosition(position).toString());
 
                 if(tempIntent != null){
                     startActivity(tempIntent);
@@ -109,20 +109,21 @@ public class SetBudget extends AppCompatActivity {
             }
         });
 
+
         DailyBox.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
 
-                timePeriodSet = true;
+                SaveButton.setEnabled(true);
 
                 boolean dIsChecked = DailyBox.isChecked();
-                if (dIsChecked == true){
+                if (dIsChecked){
                     WeeklyBox.setChecked(false);
                     MonthlyBox.setChecked(false);
                     BiweeklyBox.setChecked(false);
                 }
                 else{
-                    timePeriodSet = false;
+                    SaveButton.setEnabled(false);
 
                 }
             }
@@ -131,17 +132,16 @@ public class SetBudget extends AppCompatActivity {
             @Override
             public void onClick(View v) {
 
-
-                timePeriodSet = true;
+                SaveButton.setEnabled(true);
 
                 boolean dIsChecked = WeeklyBox.isChecked();
-                if (dIsChecked == true){
+                if (dIsChecked){
                     DailyBox.setChecked(false);
                     MonthlyBox.setChecked(false);
                     BiweeklyBox.setChecked(false);
                 }
                 else{
-                    timePeriodSet = false;
+                    SaveButton.setEnabled(false);
 
                 }
             }
@@ -150,10 +150,10 @@ public class SetBudget extends AppCompatActivity {
             @Override
             public void onClick(View v) {
 
-                timePeriodSet = true;
+                SaveButton.setEnabled(true);
 
                 boolean dIsChecked = MonthlyBox.isChecked();
-                if (dIsChecked == true){
+                if (dIsChecked){
                     WeeklyBox.setChecked(false);
                     DailyBox.setChecked(false);
                     BiweeklyBox.setChecked(false);
@@ -167,15 +167,16 @@ public class SetBudget extends AppCompatActivity {
 
             @Override
             public void onClick(View v) {
-                timePeriodSet = true;
+
+                SaveButton.setEnabled(true);
                 boolean dIsChecked = BiweeklyBox.isChecked();
-                if (dIsChecked == true){
+                if (dIsChecked){
                     WeeklyBox.setChecked(false);
                     DailyBox.setChecked(false);
                     MonthlyBox.setChecked(false);
                 }
                 else{
-                    timePeriodSet = false;
+                    SaveButton.setEnabled(false);
                 }
             }
         });
@@ -183,13 +184,17 @@ public class SetBudget extends AppCompatActivity {
         SaveButton.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                if (timePeriodSet == true && AmountField.getText().toString().equals("") == false) {
+                if (!AmountField.getText().toString().equals("")) {
 
-                    if (BudgetID != -1) {
-                        Budget tempB = StatUtils.GetBudget(getApplicationContext(), BudgetID);
+                    if (tempB.getBudgetID() != -1) {
                         tempB.setDeleted(true);
                         tempB.pushToDatabase();
                     }
+                    else{
+                        Toast.makeText(getApplicationContext(), "Budget not found", Toast.LENGTH_SHORT).show();
+                        return;
+                    }
+
                     int TPC = getResources().getInteger(R.integer.DAY_CODE);
                     int RSC = 1;
                     if (DailyBox.isChecked()) {
@@ -206,15 +211,14 @@ public class SetBudget extends AppCompatActivity {
                         RSC = StatUtils.GetMonthResetCode();
                     }
                     String am = AmountField.getText().toString();
-                    float amo = new Float(am);
+                    float amo = Float.valueOf(am);
                     Budget newB = new Budget(UserID, TPC, RSC, StatUtils.GetCurrentDate(), StatUtils.GetCurrentDate(), amo, getApplicationContext());
                     newB.pushToDatabase();
 
-                    startActivity(SwitchManager.SwitchActivity(getApplicationContext(), "Homepage", UserID));
+                    startActivity(SwitchManager.SwitchActivity(getApplicationContext(), "Homepage"));
                     finish();
                 }
             }
         });
     }
 }
-//harrison was here
